--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,41 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
-  color: rgba(0, 0, 0, 0.7); }
-  @media screen and (max-width: 992px) {
-    body {
-      font-size: 16px; } }
+  color: rgba(0, 0, 0, 0.7);
+  position: relative; /* Add this */
+  background: transparent !important; /* Add this */
+}
+
+/* Add these new styles at the bottom of your CSS file */
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+
+#bg-video {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+/* Make content sections semi-transparent so video shows through */
+#colorlib-main, 
+#colorlib-aside {
+  background-color: rgb(122, 120, 120); /* Adjust opacity as needed */
+}
 
 a {
-  color: #2c98f0;
+  color: #066467;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #2c98f0;
+    color: #07f4f0;
     outline: none;
     text-decoration: none !important; }
 
@@ -48,7 +71,7 @@ figure {
     font-size: 16px;
     width: 80%;
     margin: 20px auto 0px auto;
-    color: #b3b3b3;
+    color: #4e837c;
     font-style: italic;
     font-family: "Quicksand", Arial, sans-serif; }
     @media screen and (max-width: 480px) {
@@ -72,7 +95,7 @@ figure {
   position: fixed;
   overflow-y: scroll;
   z-index: 1001;
-  background: #cfb970;
+  background: #bce8e1d2;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -109,7 +132,7 @@ figure {
     #colorlib-aside #colorlib-logo a {
       display: block;
       text-align: center;
-      color: #b03131;
+      color: #040404;
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
     display: block;
@@ -147,7 +170,7 @@ figure {
             bottom: 7px;
             left: 0;
             right: 0;
-            background-color: #2c98f0;
+            background-color: #10e48c;
             visibility: hidden;
             -webkit-transform: scaleX(0);
             -moz-transform: scaleX(0);
@@ -1181,3 +1204,4 @@ body.offcanvas {
 
 .js .animate-box {
   opacity: 0; }
+
